--- a/welcome.html
+++ b/welcome.html
@@ -30,31 +30,43 @@ This website was designed to help answer <b>frequently asked questions</b> about
 <li>How does one find and compile spatial data? (<b><a href="data.html">Data</a></b>, step 2)</li>
 <li>When are <b><a href="scenarios.html">Scenarios</a></b> (step 3) useful in this process?</li>
 <li>There are many available decision-support tools (<b><a href="analyze.html">Analyze</a></b>, step 4). How do I make sense of them all?</li>
-<li>Many tools require specialized expertise to apply such as data pre-/post-processing.  Where can I get help with this?</li>
-<li>How can I effectively summarize and communicate technical information (<b><a href="synthesize.html">Synthesize</a></b> & <b><a href="communicate.html">Communicate</a></b>, steps 5-6)</li>
-<li>Where can I get help when something goes wrong?</li>
+<li>Many tools require specialized expertise to apply such as data pre-/post-processing.  Where can I get help?</li>
+<li>How can I effectively summarize technical information (<b><a href="synthesize.html">Synthesize</a></b> & <b><a href="communicate.html">Communicate</a></b>, steps 5-6)</li>
+<li>Where should I go for assistance when something goes wrong?</li>
 <p></p>
-<a name="msp-es"></a><div class="hr dotted clearfix">&nbsp;</div>
+<div class="hr dotted clearfix">&nbsp;</div>
 <h2>What are MSP and ecosystem services?</h2>
-<p><b>Marine spatial planning</b> (MSP) is a tool for <b>minimizing conflicts among users and reducing impacts on ecosystems</b>.  Increasing demands on ocean space for diverse uses, including tourism, recreation, fishing, shipping, national security, oil and gas exploration and renewable energy (wind and wave), have led to more conflicts among users as well as additional impacts on already stressed ocean ecosystems (Lubchenco and Petes 2010, Douvere 2008, United Nations Environment Programme 2006).</p>
+<b>Marine spatial planning</b> (MSP) is a tool for <b>minimizing conflicts among users and reducing impacts on ecosystems</b>.  Increasing demands on ocean space for diverse uses, including tourism, recreation, fishing, shipping, national security, oil and gas exploration and renewable energy (wind and wave), have led to more conflicts among users as well as additional impacts on already stressed ocean ecosystems (Lubchenco and Petes 2010, Douvere 2008, United Nations Environment Programme 2006).
+<p></p><br><br>
 <ul id="folio_scroller">
-<li><span>This diagram depicts potential conflicts among human use activities in a tropical system.  Information contained within this website can also be applied to MSP in temperate and arctic systems.  (Image courtesy of </b><a href="http://www.healthyreefs.org" target="_blank">Healthy Reefs Initiative</a>)</span><a href="img/bz_msp.png" target="_blank"><img alt="" src="img/bz_msp.png" /></a></li>
+<li><span>This diagram depicts potential conflicts among human use activities in Belize (a tropical system).  Information contained within this website can also be applied to MSP in temperate and arctic systems. <i>Image courtesy of the </b><a href="http://www.healthyreefs.org" target="_blank">Healthy Reefs Initiative</a></i></span><img alt="" src="img/folio_4.png" /></a></li>
+<li><span>Human use activities provide important economic and social benefits to people.</span><img alt="" src="img/folio_1.png" /></a></li>
+<li><span>MSP aims to maximize economic opportunities while minimizing environmental degradation.  Spatial planning that considers a range of stakeholder values has the potential to reduce ocean conflicts and maintain these important benefits provided by ecosystems.</span><img alt="" src="img/folio_3.png" /></a></li>
+<li><span>Healthy coastal-marine ecosystems such as mangroves, corals and seagrasses provide important benefits (or "ecosystem services") to people.  Poor ocean planning, however, can pose serious risk to these habitats, resulting in less services.</span><img alt="" src="img/folio_2.png" /></a></li>
 </ul> 
+<p></p><br><br>
+In this guide we highlight an <b>ecosystem service</b> (ES) <b>approach</b> (<a href="docs/Ruckelshaus_etal_2014_EE.pdf" target="_blank">Ruckelshaus et al. 2013</a>) which we believe can <i><b>aid the MSP process</b></i>.  This means that during the planning process the focus is not just on the ecosystem itself, but the flow of benefits from healthy ecosystems to people (called "ecosystem services").  This connection between environmental health and human benefit is not usually recognized or considered in the marketplace.   MSP and ecosystem services thinking now covers a myriad ideas, issues and dimensions that describe the uncountable ways that people use and depend on nature.  We cannot cover them all here so instead we attempt to narrow the conversation.
 <p></p>
-In this guide we highlight an <b>ecosystem service</b> (ES) <b>approach</b> which we believe can <i><b>aid the MSP process</b></i>.  This means that during the planning process the focus is not just on the ecosystem itself, but the flow of benefits from healthy ecosystems to people (called "ecosystem services").  This connection between environmental health and human benefit is not usually recognized or considered in the marketplace.   MSP and ecosystem services thinking now covers a myriad ideas, issues and dimensions that describe the uncountable ways that people use and depend on nature.  We cannot cover them all here so instead we attempt to narrow the conversation.
-<p></p>
-<a name="framework"></a><div class="hr dotted clearfix">&nbsp;</div>
-<h2>Suggested MSP Framework</h2>
-In 2014, Rosenthal and colleagues published a <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank"><b>research article</b></a> that outlines a framework for conducting decision-relevant assessments of ecosystem services.  This website adapts this approach for marine spatial planning.<p></p>
+<div class="hr dotted clearfix">&nbsp;</div>
+<h2>Suggested MSP Approach</h2>
+There are several suggested approaches which converge around these common themes (e.g., <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">Rosenthal et al. 2014</a>) and outline an approach for conducting decision-relevant assessments of ecosystem services.  This website adapts an approach designed by Rosenthal and colleagues at the <a href="contact.html">Natural Capital Project</a> to be used in the context of marine spatial planning.<p></p>
 <center>
-<img src="img/approach_noInset.png">
+<img src="img/approach_noInset.png" usemap="#noInset"><br>
+<map name="noInset">
+  <area shape="circle" coords="70,86,55" href="scope.html" alt="Scope">
+  <area shape="circle" coords="204,86,55" href="data.html" alt="Data">
+  <area shape="circle" coords="337,86,55" href="scenarios.html" alt="Scenarios">
+  <area shape="circle" coords="470,86,55" href="analyze.html" alt="Analyze">
+  <area shape="circle" coords="603,86,55" href="synthesize.html" alt="Synthesize">
+  <area shape="circle" coords="736,86,55" href="communicate.html" alt="Communicate">
+</map>
 </center>
-We encourage you to visit the six steps of our suggested framework by using the menu in the left panel.<br><b><u>For each step</u></b> we provide the following information:
+We encourage you to visit the six steps of our suggested approach by clicking the links on the left panel menu or conceptual diagram (above).<br><b><u>For each step</u></b> we provide the following information:
 <p></p>
 <center>
 <table>
 <tr><td><img src="img/headers/overview.png" style="vertical-align:top"></td><td><b>Overview</b></td><td>Description of each step </td></tr>
-<tr><td><img src="img/headers/products.png" style="vertical-align:top"></td><td><b>Outputs</b></td><td>Intermediate and final products and outcomes from each step</td></tr>
+<tr><td><img src="img/headers/products.png" style="vertical-align:top"></td><td><b>Goals</b></td><td>Intermediate and final products and outcomes from each step</td></tr>
 <tr><td><img src="img/headers/tips.png" style="vertical-align:top"></td><td><b>Tips</b></td><td>Helpful advice and lessons learned</td></tr>
 <tr><td><img src="img/headers/databases.png" style="vertical-align:top"></td><td><b>Databases</b></td><td>Relevant sources to spatial data and project information</td></tr>
 <tr><td><img src="img/headers/tools.png" style="vertical-align:top"></td><td><b>Tools</b></td><td>Decision-support and helper tools</td></tr>
@@ -64,19 +76,11 @@ We encourage you to visit the six steps of our suggested framework by using the 
 </table>
 </center>
 <p></p>
-<a name="natcap"></a><div class="hr dotted clearfix">&nbsp;</div>
-<h2>Natural Capital Project</h2>
-<a href="http://www.naturalcapitalproject.org/" target="_blank"><img src="img/logo_NatCap.jpg" align="left"></a>The <b><a href="http://www.naturalcapitalproject.org/" target="_blank">Natural Capital Project</a></b> (NatCap) aims to <b>integrate the values of nature into all major decisions affecting the environment and human well-being</b>. NatCap has developed practical, science-based approaches and <b><a href="http://www.naturalcapitalproject.org/toolbox.html" target="_blank">tools</a></b> that quantify, map, and value services provided by nature. Accounting for ES reveals the diverse benefits provided by nature, clarifies tradeoffs between alternative development scenarios, and helps make more informed decisions about how to use our coasts and waters.  While NatCap has some experience applying MSP, <u>we do not know, nor do, everything</u>.  Therefore, we have compiled helpful information from others in the MSP community and added our experience to the mix. 
-<p></p>
-<a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
+<div class="hr dotted clearfix">&nbsp;</div>
 <h2>NatCap MSP Use-Cases</h2>
-<p>Learning about new MSP use-cases can elucidate methods and tools that may be relevant to your own project. NatCap has compiled lessons from six MSP use-cases around the world.  Using the map below, hover over and then click on the markers to learn details about each case study.  At the bottom of each subpage we summarize how each step was accomplished for select use-cases.</p>
-<ul id="folio_scroller">
-<li><span>NatCap MSP Use-Cases</span><iframe width='600px' height='300px' frameBorder='0' src='natcap_msp_usecases.html'></iframe></li>
-</ul> 
+Learning about new MSP use-cases can elucidate methods and tools that may be relevant to your own project. The <b>Natural Capital Project (NatCap)</b> has compiled lessons from six MSP use-cases around the world.  At the bottom of each subpage we summarize how each step was accomplished for select use-cases.
 <p></p>
-<hr>
-&copy; Copyright</b> <a href="http://www.naturalcapitalproject.org" target="_blank">Natural Capital Project</a>
 <a class="float right" href="#">top</a>
+<p></p>
 </body>
 </html>
